objects/User.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <inlineHelpText>Users level of access 1 or 12</inlineHelpText>
        <label>Access #</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_L__c</fullName>
        <label>P&amp;L</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Can_Use_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains a copy of the value of the user permission PermissionslightningExperienceUser.  If TRUE, this user sees a link in the profile menu to switch to Lightning or back to Classic.  If FALSE, this user cannot navigate to Lightning.</description>
        <inlineHelpText>This field contains a copy of the value of the user permission PermissionslightningExperienceUser.  If TRUE, this user sees a link in the profile menu to switch to Lightning or back to Classic.  If FALSE, this user cannot navigate to Lightning.</inlineHelpText>
        <label>Can Use Lightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Using_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this user&apos;s next login or clicks will load Lightning.  If false, the user&apos;s next login or clicks will load Classic.  This is updated using scheduled code, so the values may lag if users have switched to Classic or Lightning from their profile menu recently.</description>
        <inlineHelpText>If true, this user&apos;s next login or clicks will load Lightning.  If false, the user&apos;s next login or clicks will load Classic.  This is updated using scheduled code, so the values may lag if users have switched to Classic or Lightning from their profile men</inlineHelpText>
        <label>Using Lightning?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>